FLY wire David/force-app/main/default/objects/Opportunity/fields/Number_of_Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Opportunity_Products__c</fullName>
    <description>Created for SALDEV-918</description>
    <label>Number of Opportunity Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>