FLY wire David/force-app/main/default/objects/Opportunity/fields/ofProducts__c.field-meta.xml
<CustomField>
    <fullName>ofProducts__c</fullName>
    <description>Rollup summary of Products on this Opportunity. For Admin use.</description>
    <inlineHelpText>Rollup summary of Products on this Opportunity. For Admin use.</inlineHelpText>
    <label>#ofProducts</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>