FLY wire David/force-app/main/default/objects/Opportunity/fields/Opp_ARR__c.field-meta.xml
<CustomField>
    <fullName>Opp_ARR__c</fullName>
    <description>Created from JIRA ticket: BOPI-304.</description>
    <inlineHelpText>This is the Estimated Opportunity Revenue in USD.  It is the total sum from all of the products added to the opportunity.</inlineHelpText>
    <label>Opp ARR</label>
    <summarizedField>OpportunityLineItem.Opp_Product_ARR__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Quote_Line_Type__c</field>
        <operation>equals</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>