FLY wire David/force-app/main/default/objects/Opportunity/fields/Opp_ARR_History__c.field-meta.xml
<CustomField>
    <fullName>Opp_ARR_History__c</fullName>
    <description>Created for SALDEV-1273.</description>
    <inlineHelpText>Used to determine if there is a change in the Opp Product ARR&apos;s from all Opportunity Products</inlineHelpText>
    <label>Opp ARR History</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>