FLY wire David/force-app/main/default/objects/Opportunity/fields/Opp_Bypass_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Opp_Bypass_DateTime__c</fullName>
    <description>Sysadmin purpose only. Not for reporting. Set by Flows to bypass validation rules. Works with Opp bypass checkbox formula field.</description>
    <inlineHelpText>Admin purpose only. Not for reporting. Set by Flows to bypass validation rules. Works with Opp bypass checkbox formula field.</inlineHelpText>
    <label>Opp Bypass DateTime</label>
    <type>DateTime</type>
</CustomField>