FLY wire David/force-app/main/default/objects/Opportunity/fields/Opp_Flow_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Opp_Flow_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger flows. Admin only.</description>
    <inlineHelpText>Used to trigger flows. Admin only.</inlineHelpText>
    <label>Opp Flow Trigger</label>
    <type>Checkbox</type>
</CustomField>