FLY wire David/force-app/main/default/objects/Opportunity/fields/Opp_GM_Health__c.field-meta.xml
<CustomField>
    <fullName>Opp_GM_Health__c</fullName>
    <label>Opp GM Health</label>
    <length>15</length>
    <type>Text</type>
</CustomField>