FLY wire David/force-app/main/default/objects/Opportunity/fields/Opp_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Opp_Last_Activity__c</fullName>
    <description>Last Task or Event linked to Opp or Account not from Marketo</description>
    <inlineHelpText>Last Task or Event linked to Opp or Account not from Marketo</inlineHelpText>
    <label>Opp Last Activity</label>
    <type>DateTime</type>
</CustomField>