FLY wire David/force-app/main/default/objects/Opportunity/fields/Opp_Net_ARR_History__c.field-meta.xml
<CustomField>
    <fullName>Opp_Net_ARR_History__c</fullName>
    <description>Created for SALDEV-1273</description>
    <inlineHelpText>Used to track changes made when Opp Product ARR or Net ARR fields are updated on all Opportunity Products</inlineHelpText>
    <label>Opp Net ARR History</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>