FLY wire David/force-app/main/default/objects/Opportunity/fields/Opp_Old_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_Old_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID in previous Salesforce system or Simplee SF.</description>
    <externalId>true</externalId>
    <label>Opp Old ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>