FLY wire David/force-app/main/default/objects/Opportunity/fields/Opp_Partial_SB_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_Partial_SB_ID__c</fullName>
    <description>Temporary field to capture Opportunity SFDC ID in Partial Sandbox. To help with syncing Production and Sandbox data and match Contact Roles.</description>
    <label>Opp Partial SB ID</label>
    <length>22</length>
    <type>Text</type>
</CustomField>