FLY wire David/force-app/main/default/objects/Opportunity/fields/Opp_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Family__c</fullName>
    <description>Process Builder, looks at Products Added and enters the Product Family from Product Line Item to the Opp. Then  can be used by all reports needing to segment by XB or CRS like Campaign Influence.</description>
    <inlineHelpText>Auto generated to list if this Opp has CRS or XB products on it.</inlineHelpText>
    <label>Opp Product Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>