FLY wire David/force-app/main/default/objects/Opportunity/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Opportunity ID used to Identify this Opportunity. Should be provided to Onboarding Team once Opportunity is Closed Won. Will be entered in Admin for Portal auto creation.</description>
    <displayFormat>{000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Opportunity ID used to Identify this Opportunity. Should be provided to Onboarding Team once Opportunity is Closed Won.</inlineHelpText>
    <label>Opportunity #</label>
    <type>AutoNumber</type>
</CustomField>