FLY wire David/force-app/main/default/objects/Opportunity/fields/OpportuntyLongID__c.field-meta.xml
<CustomField>
    <fullName>OpportuntyLongID__c</fullName>
    <description>OpportunityLongID18 Character ID for easy Excel Vlookup</description>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>OpportunityLongID18 Character ID for easy Excel Vlookup</inlineHelpText>
    <label>OpportunityLongID</label>
    <type>Text</type>
</CustomField>