FLY wire David/force-app/main/default/objects/Opportunity/fields/Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Order_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Sunita Bhattad</description>
    <inlineHelpText>Tells that Order is Created for this Opportunity.</inlineHelpText>
    <label>Order Created</label>
    <type>Checkbox</type>
</CustomField>