FLY wire David/force-app/main/default/objects/Opportunity/fields/Override_Approval__c.field-meta.xml
<CustomField>
    <fullName>Override_Approval__c</fullName>
    <description>Used by Admins to add JIRA ticket and Approver Name when there is a change requested for the Opportunity that is Closed Won</description>
    <inlineHelpText>Used to add JIRA ticket and Approver Name when there is a change requested for the Opportunity that is Closed Won</inlineHelpText>
    <label>Override Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>