FLY wire David/force-app/main/default/objects/Opportunity/fields/Owner_background__c.field-meta.xml
<CustomField>
    <fullName>Owner_background__c</fullName>
    <formula>Owner.FirstName + &quot; &quot; + Owner.LastName</formula>
    <label>Owner background</label>
    <type>Text</type>
</CustomField>