FLY wire David/force-app/main/default/objects/Opportunity/fields/Owner_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Owner_Last_Activity__c</fullName>
    <description>Captures the Date/Time of an Activity (Task or Event) created by the Opportunity Owner</description>
    <label>Owner Last Activity</label>
    <type>DateTime</type>
</CustomField>