FLY wire David/force-app/main/default/objects/Opportunity/fields/Owner_Same_as_Account__c.field-meta.xml
<CustomField>
    <fullName>Owner_Same_as_Account__c</fullName>
    <description>Returns True if the Account Owner and the Opportunity Owner are the same.</description>
    <formula>OwnerId =  Account.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns True if the Account Owner and the Opportunity Owner are the same.</inlineHelpText>
    <label>Owner Same as Account?</label>
    <type>Checkbox</type>
</CustomField>