FLY wire David/force-app/main/default/objects/Opportunity/fields/OwnerRM_Running_User__c.field-meta.xml
<CustomField>
    <fullName>OwnerRM_Running_User__c</fullName>
    <formula>Account.Relationship_Manager__r.Id = $User.Id &amp;&amp; Account.Relationship_Manager__r.Id != &quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerRM Running User</label>
    <type>Checkbox</type>
</CustomField>