FLY wire David/force-app/main/default/objects/Opportunity/fields/Paper_Checks__c.field-meta.xml
<CustomField>
    <fullName>Paper_Checks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of paper cheques auto calculation for CA Payables SAL-2265</description>
    <inlineHelpText>Number of paper cheques</inlineHelpText>
    <label>OBS # Paper Checks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>