FLY wire David/force-app/main/default/objects/Opportunity/fields/Partner_Delivered_Business_Quote__c.field-meta.xml
<CustomField>
    <fullName>Partner_Delivered_Business_Quote__c</fullName>
    <inlineHelpText>Enter the date the Partner Delivered Business Quote to Client</inlineHelpText>
    <label>Partner Delivered Business Quote</label>
    <type>Date</type>
</CustomField>