FLY wire David/force-app/main/default/objects/Opportunity/fields/Partner_Delivered_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Partner_Delivered_Sales_Order__c</fullName>
    <description>Date Partner Delivered Sales Order</description>
    <inlineHelpText>Enter Date Partner Delivered Sales Order</inlineHelpText>
    <label>Partner Delivered Sales Order</label>
    <type>Date</type>
</CustomField>