FLY wire David/force-app/main/default/objects/Opportunity/fields/Partner_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Opportunity_Number__c</fullName>
    <description>Unique number used by Cerner (Partner) to identify the specific opportunity. (if you change to generic then you can switch &quot;cerner&quot; to &quot;partner&quot; in the description). Requested by Matt L . SAL-2102</description>
    <inlineHelpText>Unique number used by Cerner or other Partner to identify the specific opportunity.</inlineHelpText>
    <label>Partner Opportunity Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>