FLY wire David/force-app/main/default/objects/Opportunity/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description>Field to better distinguish the type of relationship this Opp has to our Partner. To work with the &apos;Partner Name&apos; which used to be Referred by Partner.</description>
    <inlineHelpText>Choose the type of Partnership this Opportunity has with the Partner, listed in &quot;Partner&quot; field.</inlineHelpText>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flywire Refers Partner</fullName>
            </value>
            <value>
                <fullName>Partner Refers Flywire</fullName>
            </value>
            <value>
                <fullName>Flywire Resells Partner Product</fullName>
            </value>
            <value>
                <fullName>Partner Resells Flywire Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>