FLY wire David/force-app/main/default/objects/Opportunity/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <description>Denote which WPM Pipeline this Deal came from. Also, used to exclude from Flywire Pipeline reports</description>
    <inlineHelpText>Denote which WPM Pipeline this Deal came from. Also, used to exclude from Flywire Pipeline reports</inlineHelpText>
    <label>Pipeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Security</fullName>
            </value>
            <value>
                <fullName>RM Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>