FLY wire David/force-app/main/default/objects/Opportunity/fields/Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage__c</fullName>
    <description>Capture previous Opportunity Stage. Filled in by Workflow when stage is changed.</description>
    <inlineHelpText>Capture previous Opportunity Stage. Filled in by Workflow when stage is changed.</inlineHelpText>
    <label>Previous Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>