FLY wire David/force-app/main/default/objects/Opportunity/fields/Pricing_Ticket_Link__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Ticket_Link__c</fullName>
    <description>Link to the Jira ticket with the Pricing details and approvals</description>
    <inlineHelpText>Link to the Jira ticket with the Pricing details and approvals</inlineHelpText>
    <label>Pricing Ticket Link</label>
    <type>Url</type>
</CustomField>