FLY wire David/force-app/main/default/objects/Opportunity/fields/Proj_Annual_Money_Moved_USD__c.field-meta.xml
<CustomField>
    <fullName>Proj_Annual_Money_Moved_USD__c</fullName>
    <inlineHelpText>Annual money moved</inlineHelpText>
    <label>Proj. Annual Money Moved (USD)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>