FLY wire David/force-app/main/default/objects/Opportunity/fields/Proj_Mo_Money_Moved_USD__c.field-meta.xml
<CustomField>
    <fullName>Proj_Mo_Money_Moved_USD__c</fullName>
    <description>Estimated amount of USD payments this client would move in a month. Used by Commercial team only.</description>
    <inlineHelpText>Estimated amount of USD payments this client would move in a month.</inlineHelpText>
    <label>Proj. Mo Money Moved (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>