FLY wire David/force-app/main/default/objects/Opportunity/fields/Proj_Mo_Money_Moved_USD_Next_12__c.field-meta.xml
<CustomField>
    <fullName>Proj_Mo_Money_Moved_USD_Next_12__c</fullName>
    <description>No Longer Used, Per Colin. Will delete in future.Estimate of this clients money moved (payments) for the next 12 months, with existing product market fit.</description>
    <inlineHelpText>Estimate of this clients money moved (payments) for the next 12 months, with existing product market fit. Could be more or less that the total projected Opp based on product fit.</inlineHelpText>
    <label>OBSProj. Mo Money Moved (USD) Next 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>