FLY wire David/force-app/main/default/objects/Opportunity/fields/Qualifying_Integration__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Integration__c</fullName>
    <description>Integration field for EDU commissions. If the product will be integrated with one of these then, the Commissions are affected.</description>
    <inlineHelpText>Enter if products on this Opp will be integrated with one of these options.</inlineHelpText>
    <label>Qualifying Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>JSON Gateway</fullName>
            </value>
            <value>
                <fullName>SFS</fullName>
            </value>
            <value>
                <fullName>Non Partner - Custom Integration</fullName>
            </value>
            <value>
                <fullName>Partner Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>