FLY wire David/force-app/main/default/objects/Opportunity/fields/Reason_Won__c.field-meta.xml
<CustomField>
    <fullName>Reason_Won__c</fullName>
    <description>Select why we won the opportunity</description>
    <inlineHelpText>Select why we won the opportunity</inlineHelpText>
    <label>Won Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Product Fit</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>