FLY wire David/force-app/main/default/objects/Opportunity/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>BOPI-532 Field used in price rules to show Warnings on the QLE to fill ARR fields. This is referenced in SBQQ__Quote__r.Opportunity_Record_Type_Name__c formula field and then used as a field conditon in ARR warning price rules</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>