FLY wire David/force-app/main/default/objects/Opportunity/fields/Referred_by_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Partner related to this Opp who is referring or reselling. Use the Partner Type field to specify our relationship. Renamed field label since it is not always referred by. SAL-2584</description>
    <inlineHelpText>Partner related to this Opp who is referring or reselling. Use the Partner Type field to specify our relationship</inlineHelpText>
    <label>Refer/Resell Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opp (Refer/Resell Partner)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>