FLY wire David/force-app/main/default/objects/Opportunity/fields/Report_Owner__c.field-meta.xml
<CustomField>
    <fullName>Report_Owner__c</fullName>
    <description>Returns true for records belonging to the current user:</description>
    <formula>OwnerId =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns true for records belonging to the current user:</inlineHelpText>
    <label>OBS Report Owner</label>
    <type>Checkbox</type>
</CustomField>