FLY wire David/force-app/main/default/objects/Opportunity/fields/Requested_Business_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Business_Quote_Date__c</fullName>
    <description>Used by HC team to help manage coordination of our channel partners (Primarily Oracle) moving quotes and sales orders in their systems to the clients. SAL-6945</description>
    <inlineHelpText>Provide date which you are notified, by the client and/or channel partner, that the client has an interest in Flywire&apos;s solution(s) and wants a quote.</inlineHelpText>
    <label>Requested Business Quote Date</label>
    <type>Date</type>
</CustomField>