FLY wire David/force-app/main/default/objects/Opportunity/fields/Requested_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Contract_Date__c</fullName>
    <description>Used by HC team to help manage coordination of our channel partners (Primarily Oracle) moving quotes and sales orders in their systems to the clients. SAL-6945</description>
    <inlineHelpText>Provide date which you are notified, by the client and/or channel partner, that the client wants a contract sent for Flywire&apos;s solution(s).</inlineHelpText>
    <label>Requested Contract Date</label>
    <type>Date</type>
</CustomField>