FLY wire David/force-app/main/default/objects/Opportunity/fields/Requires_Revenue_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Revenue_Approval__c</fullName>
    <description>BOPI-624 Cross-object formula field created to verify if an Opp should trigger the revenue approval rule. This field is filled by the QCP custom script.

It is set to true if Flywire is NOT MoR or if Rev Share product is added</description>
    <formula>SBQQ__PrimaryQuote__r.Requires_Revenue_Approval__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Revenue Approval</label>
    <type>Checkbox</type>
</CustomField>