FLY wire David/force-app/main/default/objects/Opportunity/fields/Revenue_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition__c</fullName>
    <description>Information related to an issue in recognizing Revenue for this Opportunity.</description>
    <inlineHelpText>Information related to an issue in recognizing Revenue for this Opportunity.</inlineHelpText>
    <label>Revenue Recognition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>