FLY wire David/force-app/main/default/objects/Opportunity/fields/Revenue_Share_Details__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Details__c</fullName>
    <description>Created for BOPI-339. Field Contains historical data and can&apos;t be deleted until the data is moved elsewhere.</description>
    <inlineHelpText>Insert link to table with tier details. Please include explanatory text to describe how the tiers work, when they reset, if they are marginal (like tax rates) or cumulative, etc. to appear on contract document</inlineHelpText>
    <label>OBS Revenue Share Details</label>
    <type>TextArea</type>
</CustomField>