FLY wire David/force-app/main/default/objects/Opportunity/fields/Rollup_Portal_Margin_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Portal_Margin_Revenue__c</fullName>
    <description>Rollup of Portal Margin Cost on any linked Product Config Record. Hidden to all as this contains Revenue data.</description>
    <inlineHelpText>Rollup of Portal Margin Cost on any linked Product Config Record. Hidden to all as this contains Revenue data.</inlineHelpText>
    <label>Rollup Portal Margin Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>