FLY wire David/force-app/main/default/objects/Opportunity/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>Field requested by Tom Metcalf and used by Edu Only.</description>
    <inlineHelpText>What existing processes and/or systems are causing the institution unnecessary pain.</inlineHelpText>
    <label>Root Cause</label>
    <length>150</length>
    <type>Text</type>
</CustomField>