FLY wire David/force-app/main/default/objects/Opportunity/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For HC Partners. When Account (Contract) is with Partner, fill in what HC account this opportunity is for. BOPI-451 Filled in by User, used in Flow to auto fill in Quote Line Ship To Account field.</description>
    <inlineHelpText>Equals the Opp Account, unless the Opp is contracted with a Partner, in which case it&apos;s the serviced Account</inlineHelpText>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Ship To Account)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>