FLY wire David/force-app/main/default/objects/Opportunity/fields/Ship_To_HealthCare_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_HealthCare_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Healthcare Hospital to be selected</description>
    <label>OBS Ship To HealthCare Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Ship To HealthCare Account)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>