FLY wire David/force-app/main/default/objects/Opportunity/fields/Simplee_Opp_ID__c.field-meta.xml
<CustomField>
    <fullName>Simplee_Opp_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Simplee Opp ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>