FLY wire David/force-app/main/default/objects/Opportunity/fields/Sub_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Lead_Source__c</fullName>
    <description>Sub lead source from converted Lead</description>
    <inlineHelpText>Sub lead source from converted Lead</inlineHelpText>
    <label>Sub Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>