FLY wire David/force-app/main/default/objects/Opportunity/fields/Sub_vs_Direct__c.field-meta.xml
<CustomField>
    <fullName>Sub_vs_Direct__c</fullName>
    <description>Applies to Channel Partner agreements only. Please identify if the contract will be signed directly with the client or executed as a sub-agreement.</description>
    <inlineHelpText>Applies to Channel Partner agreements only. Please identify if the contract will be signed directly with the client or executed as a sub-agreement.</inlineHelpText>
    <label>Sub vs Direct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sub</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>