FLY wire David/force-app/main/default/objects/Opportunity/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <description>Created for SALDEV-1020</description>
    <formula>SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c</formula>
    <label>Subscription Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>