FLY wire David/force-app/main/default/objects/Opportunity/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <description>Field requested by Tom Metcalf for Edu use only.</description>
    <inlineHelpText>What observable issues are being experienced because of the root cause (high call volumes, time consuming manual work, etc.)</inlineHelpText>
    <label>Symptoms</label>
    <length>150</length>
    <type>Text</type>
</CustomField>