FLY wire David/force-app/main/default/objects/Opportunity/fields/Tax_Id_Complete__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BOPI-344  Indicates that the Tax Id field for all Ship To Accounts on this Opp that have Separate Entity/Tax Id = Yes on account record have their Tax Id populated.</description>
    <inlineHelpText>Indicates whether the Tax Id field on all Ship to Accounts is populated. Required for setting Stage = Legal</inlineHelpText>
    <label>Tax Id Complete</label>
    <type>Checkbox</type>
</CustomField>