FLY wire David/force-app/main/default/objects/Opportunity/fields/Top_5_CCY_Sent__c.field-meta.xml
<CustomField>
    <fullName>Top_5_CCY_Sent__c</fullName>
    <description>The top 5 currencies most frequently used currencies. SAL-2642</description>
    <inlineHelpText>The top 5 currencies most frequently used currencies.</inlineHelpText>
    <label>Top 5 CCY Sent</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>