FLY wire David/force-app/main/default/objects/Opportunity/fields/Total_Addressable_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_Addressable_ARR__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3165</description>
    <inlineHelpText>Enter the estimated total addressable annual revenue in $</inlineHelpText>
    <label>Total Addressable ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>