FLY wire David/force-app/main/default/objects/Opportunity/fields/Total_Addressable_ARR_w_FW_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Addressable_ARR_w_FW_Capabilities__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3166</description>
    <inlineHelpText>Enter the estimated total addressable annual revenue that Flywire can process given the CURRENT capabilities.</inlineHelpText>
    <label>Total Addressable ARR w/ FW Capabilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>