FLY wire David/force-app/main/default/objects/Opportunity/fields/Total_EST_Annual_MM__c.field-meta.xml
<CustomField>
    <fullName>Total_EST_Annual_MM__c</fullName>
    <description>RollUp Summary for EST Annual MM in Opportunity Product</description>
    <inlineHelpText>Total Amount for EST Annual MM in Opportunity Product</inlineHelpText>
    <label>Total EST Annual MM</label>
    <summarizedField>OpportunityLineItem.Est_Annual_MM__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>